--- a/web/page5.html
+++ b/web/page5.html
@@ -651,7 +651,7 @@
     </div>
     <div class="g-apps">
         <!-- <button id="nonebutton" class="buttonlink"></button> -->
-        <button onclick="window.open('./downloads', '_blank')" class="buttonlink" id="downloads">Скачать приложение</button>
+        <button onclick="window.open('https://live.ketame.ru/downloads', '_blank')" class="buttonlink" id="downloads">Скачать приложение</button>
         <!-- <button onclick="window.open('./app/radio.apk', '_blank')" class="buttonlink">Android</button> -->
         <!-- <button onclick="window.open('./app/radio.exe', '_blank')" class="buttonlink">Windows</button> -->
         <style>
