--- a/web/page4.html
+++ b/web/page4.html
@@ -238,7 +238,7 @@
                         }
                         .grid-container {
                             margin: 0px auto;
-                            top: 40px;
+                            /* top: 40px; */
                             background: #ffffff30;
                             border: 1px solid #ffffff30;
                             backdrop-filter: blur(2vh);
@@ -832,24 +832,25 @@
         </style>
     </div>
 </div>
-<!-- <div id="use">Новая версия приложения</div>
+<div id="use">Обновление приложения уже скоро...</div>
 <style>
     #use{
         color: #ffffff;
-        background: #09090b;
+        background: #460000;
         width: 100%;
         max-width: 430px;
         min-width: 300px;
         left: 2px;
-        top: 50px;
+        text-align: center;
+        top: 5px;
         border-radius: 5px;
-        border: #323337 1px solid;
+        border: #ff0000 1px solid;
         position: relative;
         margin: 0 auto;
         display: block;
     }
-</style> -->
-<br><br><br><br>
+</style>
+<!-- <br><br><br><br> -->
 
 </body>
 </html>
@@ -864,3 +865,55 @@
 <!-- <script src="list.js"></script> -->
 <!-- <script src="https://raw.githack.com/lisikme/live.ketame.ru/web/error.js"></script>   -->
 <!-- <script src="ver3.js"></script>   -->
+
+<style>
+body {
+    background: linear-gradient(135deg, #221415 0%, #0d0d18 100%);
+}
+@media (max-width: 769px) {
+    body {
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 16px;
+        margin: 0;
+        font-family: 'Onest', -apple-system, BlinkMacSystemFont, sans-serif;
+        overflow-x: hidden;
+    }
+
+    .body-wrap {
+        width: 100%;
+        max-width: 430px;
+        margin: 0 auto;
+    }
+
+    @keyframes slideDown {
+        from {
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .selectmenu.show {
+        display: grid !important;
+        animation: slideDown 0.3s ease-out;
+    }
+}
+
+@media (min-width: 769px) {
+    .body-wrap {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        padding: 20px;
+    }
+    #app-cover {
+        width: 430px;
+    }
+}</style>
