--- a/web/page4.html
+++ b/web/page4.html
@@ -963,15 +963,15 @@ body {
 }
 
 #nums{
-    width: 26px;
-    font-size: 10px !important;
-    right: 0px;
-    border-right: none !important;
-    border-bottom: none !important;
-    border-bottom-right-radius: 0px;
-    border-bottom-left-radius: 0px;
-    bottom: 0px;
-    border-top-right-radius: 0px;
+    width: 30px;
+    font-size: 12px !important;
+    right: 3px;
+    /* border-right: none !important; */
+    border: none !important;
+    /* border-bottom-right-radius: 0px; */
+    /* border-bottom-left-radius: 0px; */
+    bottom: 3px;
+    /* border-top-right-radius: 0px; */
     align-content: center;
     height: unset;
 }
