--- a/web/page4.html
+++ b/web/page4.html
@@ -64,6 +64,11 @@
         <meta name="keywords" content="KetaRu, KetaruDev, KetaruDev, fist89, golive, radio, live, music, discord, bot, bots, ketame.ru">
     </head>
     <body>
+        <div class="animated-bg">
+            <div class="gradient-orbs orb-1"></div>
+            <div class="gradient-orbs orb-2"></div>
+        </div>
+        <div class="floating-particles" id="floatingParticles"></div>
         <!-- partial:index.partial.html -->
         <!-- Tracks used in this music/audio player application are free to use. I downloaded them from Soundcloud and NCS websites. I am not the owner of these tracks. -->
         <div id="app-cover">
@@ -903,9 +908,6 @@
 #track-name{
     transition: 0.2s all !important;
 }
-body {
-    background: linear-gradient(135deg, #221415 0%, #0d0d18 100%);
-}
 @media (max-width: 769px) {
     body {
         min-height: 100vh;
@@ -995,4 +997,102 @@ body {
     #app-cover {
         width: 430px;
     }
-}</style>
+}
+
+:root {
+    --primary-color: #ff7235;
+    --primary-glow: rgba(255, 114, 53, 0.4);
+    --bg-color: #0a0a12;
+    --surface-color: #15151f;
+    --text-color: #ffffff;
+    --text-secondary: rgba(255, 255, 255, 0.7);
+    --accent-color: #5050a1;
+    --gradient: linear-gradient(135deg, #ff7235 0%, #ffaa35 100%);
+}
+
+body {
+    background: linear-gradient(135deg, #221415 0%, #0d0d18 100%);
+}
+body {
+    background: var(--bg-color) !important;
+}
+
+/* Частицы */
+.floating-particles {
+    position: fixed;
+    top: -6px;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    pointer-events: none;
+    z-index: 2;
+}
+
+.particle {
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background: var(--primary-color) !important;
+    border-radius: 50%;
+    opacity: 0.3;
+    animation: floatParticle 20s infinite linear;
+}
+
+@keyframes floatParticle {
+    0% { 
+        transform: translateY(100vh) rotate(0deg); 
+    }
+    100% { 
+        transform: translateY(-100px) rotate(360deg); 
+    }
+}
+
+.parallax-element {
+    will-change: transform;
+}
+
+.animated-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow: hidden;
+}
+.gradient-orbs {
+    position: absolute;
+    width: 800px;
+    height: 800px;
+    border-radius: 50%;
+    filter: blur(100px);
+    opacity: 0.1;
+    animation: float 20s infinite ease-in-out;
+    z-index: 44;
+}
+.orb-1 {
+    background: var(--primary-color) !important;
+    top: -400px;
+    left: -200px;
+    animation-delay: 0s;
+}
+.orb-2 {
+    background: var(--accent-color) !important;
+    bottom: -400px;
+    right: -200px;
+    animation-delay: -10s;
+}
+@keyframes float {
+    0%, 100% { transform: translate(0, 0) scale(1); }
+    25% { transform: translate(50px, 50px) scale(1.1); }
+    50% { transform: translate(-30px, 70px) scale(0.9); }
+    75% { transform: translate(70px, -30px) scale(1.05); }
+}
+#app-cover{
+    z-index: 1000;
+}
+.grid-container{
+    box-shadow: #00000080 0px 0px 13px 0px;
+    left: 0px !important;
+}
+</style>
