--- a/web/page5.html
+++ b/web/page5.html
@@ -933,28 +933,11 @@
     }
 </style>
 <div class="grid-container" id="grid-ads">
+    <!-- <div id="title-ads">Реклама от проекта</div> -->
     <a href="https://kensolua.ru" target="_blank" rel="noopener noreferrer" id="ads">
         <img src="kenso.png" alt="" id="img-ads">
     </a>
 </div>
-<!-- <div id="use">Новая версия приложения</div>
-<style>
-    #use{
-        color: #ffffff;
-        background: #09090b;
-        width: 100%;
-        max-width: 430px;
-        min-width: 300px;
-        left: 2px;
-        top: 50px;
-        border-radius: 5px;
-        border: #323337 1px solid;
-        position: relative;
-        margin: 0 auto;
-        display: block;
-    }
-</style>
-<!-- <br><br><br><br> -->
 
 </body>
 </html>
